--- a/src/Huskui.Gallery/Views/Input/HyperlinkButtonsPage.axaml
+++ b/src/Huskui.Gallery/Views/Input/HyperlinkButtonsPage.axaml
@@ -8,8 +8,17 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Huskui.Gallery.Views.Input.HyperlinkButtonsPage">
 
-    <ScrollViewer>
-        <StackPanel Margin="24" Spacing="32">
+    <ScrollViewer Padding="48">
+        <StackPanel Spacing="32" MaxWidth="1000">
+            <!-- Page Header -->
+            <StackPanel Spacing="8">
+                <TextBlock Text="Hyperlink Buttons"
+                           FontSize="28"
+                           FontWeight="{StaticResource ControlStrongFontWeight}" />
+                <TextBlock Text="Link-style buttons for navigation and external references"
+                           FontSize="{StaticResource LargeFontSize}"
+                           Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+            </StackPanel>
 
             <controls:ExampleContainer Title="Basic HyperlinkButtons"
                                        Description="Standalone hyperlink buttons with navigation">
