--- a/src/Huskui.Gallery/Views/Controls/SkeletonContainersPage.axaml
+++ b/src/Huskui.Gallery/Views/Controls/SkeletonContainersPage.axaml
@@ -7,8 +7,17 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Huskui.Gallery.Views.Controls.SkeletonContainersPage">
 
-    <ScrollViewer>
-        <StackPanel Margin="24" Spacing="32">
+    <ScrollViewer Padding="48">
+        <StackPanel Spacing="32" MaxWidth="1000">
+            <!-- Page Header -->
+            <StackPanel Spacing="8">
+                <TextBlock Text="Skeleton Containers"
+                           FontSize="28"
+                           FontWeight="{StaticResource ControlStrongFontWeight}" />
+                <TextBlock Text="Loading placeholders that mimic content structure during data fetching"
+                           FontSize="{StaticResource LargeFontSize}"
+                           Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+            </StackPanel>
 
             <controls:ExampleContainer Title="Basic Skeleton Loading"
                                        Description="Skeleton placeholder for content loading">
