--- a/src/Huskui.Gallery/Views/Layout/FlexWrapPanelsPage.axaml
+++ b/src/Huskui.Gallery/Views/Layout/FlexWrapPanelsPage.axaml
@@ -7,8 +7,17 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Huskui.Gallery.Views.Layout.FlexWrapPanelsPage">
 
-    <ScrollViewer>
-        <StackPanel Margin="24" Spacing="32">
+    <ScrollViewer Padding="48">
+        <StackPanel Spacing="32" MaxWidth="1000">
+            <!-- Page Header -->
+            <StackPanel Spacing="8">
+                <TextBlock Text="FlexWrap Panels"
+                           FontSize="28"
+                           FontWeight="{StaticResource ControlStrongFontWeight}" />
+                <TextBlock Text="Flexible wrapping layout panels for responsive content arrangement"
+                           FontSize="{StaticResource LargeFontSize}"
+                           Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+            </StackPanel>
 
             <controls:ExampleContainer Title="Basic FlexWrapPanel"
                                        Description="Flexible wrapping layout that distributes width evenly">
