--- a/src/Huskui.Gallery/Views/Overlays/ToastsPage.axaml
+++ b/src/Huskui.Gallery/Views/Overlays/ToastsPage.axaml
@@ -8,8 +8,17 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Huskui.Gallery.Views.Overlays.ToastsPage">
 
-    <ScrollViewer>
-        <StackPanel Margin="24" Spacing="32">
+    <ScrollViewer Padding="48">
+        <StackPanel Spacing="32" MaxWidth="1000">
+            <!-- Page Header -->
+            <StackPanel Spacing="8">
+                <TextBlock Text="Toasts"
+                           FontSize="28"
+                           FontWeight="{StaticResource ControlStrongFontWeight}" />
+                <TextBlock Text="Temporary overlay messages for brief status updates and alerts"
+                           FontSize="{StaticResource LargeFontSize}"
+                           Foreground="{StaticResource ControlSecondaryForegroundBrush}" />
+            </StackPanel>
 
             <controls:ExampleContainer Title="Content Preview Toasts"
                                        Description="Heavy-weight bottom-sliding content viewers">
